--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!--     <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   <!-- <link rel="icon" type="image/png" href="img/seal_icon.png"> -->
 
+    <link rel="stylesheet" href="./static/css/bulma.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
