--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
     <!-- <script src="js/bulma-carousel.min.js"></script> -->
     <script src="js/app.js"></script>
-	
+    <script src="js/bulma-carousel.js"></script>
+
     <style>
         .nav-pills {
           position: relative;
