--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <!-- <link rel="stylesheet" href="css/bulma-carousel.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
+    <!-- <link rel="stylesheet" href="css/bulma-carousel.min.css"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
     <!-- <script src="js/bulma-carousel.min.js"></script> -->
-    <script src="js/app.js"></script>
     <!-- <script src="js/bulma-carousel.js"></script> -->
     <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
 
     <style>
         .nav-pills {
@@ -155,60 +155,62 @@
             </div>
         </div> -->
 
-        <div class="row justify-content-md-center">
-            <div class="container">
-            <div id="results-carousel" class="carousel results-carousel">
-                <div class="item item-steve">
-                <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/steve.mp4"
-                            type="video/mp4">
-                </video>
+        <section class="hero is-light is-small">
+            <div class="hero-body">
+              <div class="container">
+                <div id="results-carousel" class="carousel results-carousel">
+                  <div class="item item-steve">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/steve.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-chair-tp">
+                    <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/chair-tp.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-shiba">
+                    <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/shiba.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-fullbody">
+                    <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/fullbody.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-blueshirt">
+                    <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/blueshirt.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-mask">
+                    <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/mask.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-coffee">
+                    <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/coffee.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item item-toby">
+                    <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/toby2.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
                 </div>
-                <div class="item item-chair-tp">
-                <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/chair-tp.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-shiba">
-                <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/shiba.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-fullbody">
-                <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/sim-hb.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-blueshirt">
-                <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/real-hb.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-mask">
-                <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/mask.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-coffee">
-                <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/coffee.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
-                <div class="item item-toby">
-                <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/toby2.mp4"
-                            type="video/mp4">
-                </video>
-                </div>
+              </div>
             </div>
-            </div>
-        </div>
+          </section>
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
