--- a/index.html
+++ b/index.html
@@ -162,38 +162,38 @@
                 <br><br>
                 <div id="results-carousel" class="carousel results-carousel">
                   <div class="item item-steve">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline height="50%">
-                      <source src="videos/sim-hb.mp4"
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                        <source src="videos/sim-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-chair-tp">
-                    <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="50%">
-                      <source src="videos/real-hb.mp4"
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                        <source src="videos/real-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-shiba">
-                    <video poster="" id="shiba" autoplay controls muted loop playsinline height="50%">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-blueshirt">
-                    <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="50%">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-mask">
-                    <video poster="" id="mask" autoplay controls muted loop playsinline height="50%">
-                      <source src="./static/videos/mask.mp4"
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                        <source src="./static/videos/mask.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-coffee">
-                    <video poster="" id="coffee" autoplay controls muted loop playsinline height="50%">
-                      <source src="./static/videos/coffee.mp4"
+                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                        <source src="./static/videos/coffee.mp4"
                               type="video/mp4">
                     </video>
                   </div>
@@ -297,7 +297,7 @@
                     HM-EQA Dataset
                 </h3>
                 <p class="text-justify">
-                    While prior work has primarily considered synthetic scenes and simple questions such as “what is the color of the coffee table?” involving basic attributes of relatively large pieces of furniture, we are interested in applying our VLM-based framework in more realistic and diverse scenarios, where the question can be more open-ended and possibly require semantic reasoning. To this end, we propose <a href="//github.com/Stanford-ILIAD/active-eqa/tree/master/data">HM-EQA</a>, a new EQA dataset with 500 questions based on 312 scenes from the <a href="//aihabitat.org/datasets/hm3d-semantics/">Habitat-Matterport 3D Research Dataset (HM3D)</a>. We consider five categories of questions:
+                    While prior work has primarily considered synthetic scenes and simple questions such as “what is the color of the coffee table?” involving basic attributes of relatively large pieces of furniture, we are interested in applying our VLM-based framework in more realistic and diverse scenarios, where the question can be more open-ended and possibly require semantic reasoning. To this end, we propose <a href="//github.com/Stanford-ILIAD/active-eqa/tree/master/data">HM-EQA</a>, a new EQA dataset with 500 questions based on 267 scenes from the <a href="//aihabitat.org/datasets/hm3d-semantics/">Habitat-Matterport 3D Research Dataset (HM3D)</a>. We consider five categories of questions:
                     <!-- <br><p style="text-align:center;">
                         <image src="img/trial.png" width="60%">
                     </p> -->
