--- a/index.html
+++ b/index.html
@@ -162,37 +162,37 @@
                 <br><br>
                 <div id="results-carousel" class="carousel results-carousel">
                   <div class="item item-steve">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-chair-tp">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/real-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-shiba">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-blueshirt">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-mask">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="./static/videos/mask.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item item-coffee">
-                    <video poster="" id="steve" autoplay controls muted loop playsinline style="height: 50%;">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="./static/videos/coffee.mp4"
                               type="video/mp4">
                     </video>
@@ -442,7 +442,7 @@
                     Acknowledgements
                 </h3>
                 <p class="text-justify">
-                    We thank the contractors at TRI for helping post-processing the HM-EQA dataset. The authors were partially supported by the Toyota Research Institute (TRI), the NSF CAREER Award [#2044149], and the Office of Naval Research [N00014-23-1-2148]. This article solely reflects the opinions and conclusions of its authors and NSF, ONR, TRI or any other Toyota entity. The website template is from <a href="https://robot-help.github.io/">KnowNo</a>.
+                    We thank the contractors at TRI for helping post-processing the HM-EQA dataset. The authors were partially supported by the Toyota Research Institute (TRI), the NSF CAREER Award [#2044149], and the Office of Naval Research [N00014-23-1-2148]. This article solely reflects the opinions and conclusions of its authors and NSF, ONR, TRI or any other Toyota entity. The website template is from <a href="https://robot-help.github.io/">KnowNo</a> and <a href="https://nerfies.github.io/">nerfies</a>.
                 </p>
             </div>
         </div>
