--- a/index.html
+++ b/index.html
@@ -161,37 +161,37 @@
               <div class="container">
                 <br><br>
                 <div id="results-carousel" class="carousel results-carousel">
-                  <div class="item item-steve">
+                    <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
-                  <div class="item item-chair-tp">
+                  <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="videos/real-hb.mp4"
                               type="video/mp4">
                     </video>
                   </div>
-                  <div class="item item-shiba">
+                  <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
-                  <div class="item item-blueshirt">
+                  <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-hb.mp4"
                         type="video/mp4">
                     </video>
                   </div>
-                  <div class="item item-mask">
+                  <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="./static/videos/mask.mp4"
                               type="video/mp4">
                     </video>
                   </div>
-                  <div class="item item-coffee">
+                  <div class="item">
                     <video poster="" autoplay muted loop height="100%">
                         <source src="./static/videos/coffee.mp4"
                               type="video/mp4">
