--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" /> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" /> -->
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script> -->
-    <link rel="stylesheet" href="css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="css/bulma.min.css"> -->
+    <link rel="stylesheet" href="css/bulma-myscope.css">
     <link rel="stylesheet" href="css/bulma-carousel.min.css">
     <link rel="stylesheet" href="css/bulma-slider.min.css">
 
@@ -157,7 +158,7 @@
                 </div>
             </div>
         </div> -->
-
+        <div class='myscope'>
         <section class="hero is-light is-small">
             <div class="hero-body">
               <div class="container">
@@ -203,6 +204,7 @@
               </div>
             </div>
           </section>
+        </div>
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
