--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
     <script src="js/bulma-carousel.min.js"></script>
-    <!-- <script src="js/bulma-slider.min.js"></script> -->
-    <!-- <script src="js/bulma-carousel.js"></script> -->
+    <script src="js/bulma-slider.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/app.js"></script>
 
