--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
-                <p class="text-justify">
-                    We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments.
+                <p class="text-justify text-center">
+                    <strong>We combine VLM's commonsense reasoning and rigorous uncertainty quantification to enable agents to efficiently explore relevant regions, and then stop to answer questions about unknown 3D environments.</strong>
                 </p>
             </div>
         </div>
@@ -172,45 +172,73 @@
                 <div id="results-carousel" class="carousel results-carousel">
                     <br><br><br>
                     <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-1.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-2.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-3.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-4.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-5.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-6.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="90%">
+                    <video poster="" autoplay muted loop height="100%">
                         <source src="videos/sim-7.mp4"
                               type="video/mp4">
+                    </video>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="hero is-light is-small">
+            <div class="hero-body">
+              <div class="container">
+                <div id="results-carousel" class="carousel results-carousel">
+                    <br><br><br>
+                    <div class="item">
+                    <video poster="" autoplay muted loop height="100%">
+                        <source src="videos/real-1.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item">
+                    <video poster="" autoplay muted loop height="100%">
+                        <source src="videos/real-2.mp4"
+                              type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="item">
+                    <video poster="" autoplay muted loop height="100%">
+                        <source src="videos/real-3.mp4"
+                        type="video/mp4">
                     </video>
                   </div>
                 </div>
