--- a/index.html
+++ b/index.html
@@ -173,43 +173,43 @@
                 <div id="results-carousel" class="carousel results-carousel">
                     <br><br><br>
                     <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-1.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-2.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-3.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-4.mp4"
                         type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-5.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-6.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/sim-7.mp4"
                               type="video/mp4">
                     </video>
@@ -224,20 +224,20 @@
               <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
                     <br><br><br>
-                    <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
-                        <source src="videos/real-1.mp4"
+                  <div class="item">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
+                            <source src="videos/real-1.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/real-2.mp4"
                               type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
-                    <video poster="" autoplay muted loop height="100%">
+                    <video poster="" id="" autoplay controls muted loop playsinline height="100%">
                         <source src="videos/real-3.mp4"
                         type="video/mp4">
                     </video>
