--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
             </div>
           </section>
 
+          <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Simulated scenarios in the Habitat simulator
+                </p>
+            </div>
+        </div>
+
           <section class="hero is-light is-small">
             <div class="hero-body">
               <div class="container">
@@ -244,6 +252,14 @@
               </div>
             </div>
           </section>
+        </div>
+
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Real-world scenarios with a Fetch mobile robot
+                </p>
+            </div>
         </div>
 
         <div class="row justify-content-md-center">
