--- a/index.html
+++ b/index.html
@@ -217,15 +217,16 @@
               </div>
             </div>
           </section>
-
-          <div class="row justify-content-md-center">
-            <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
-                    Simulated scenarios in the Habitat simulator
-                </p>
-            </div>
         </div>
 
+        <div class="row justify-content-md-center">
+        <div class="col-md-12 col-lg-10">
+            <p class="text-justify text-center">
+                Simulated scenarios in the Habitat simulator
+            </p>
+        </div>
+
+        <div class='myscope'>
           <section class="hero is-light is-small">
             <div class="hero-body">
               <div class="container">
