--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
         </div>
 
         <div class="row justify-content-md-center">
-        <div class="col-md-12 col-lg-10">
-            <p class="text-justify text-center">
-                Simulated scenarios in the Habitat simulator
-            </p>
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Simulated scenarios in the Habitat simulator
+                </p>
+            </div>
         </div>
 
         <div class='myscope'>
