--- a/index.html
+++ b/index.html
@@ -173,94 +173,85 @@
                 <div id="results-carousel" class="carousel results-carousel">
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-1.mp4"
-                              type="video/mp4">
+                        <source src="videos/sim-1.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-2.mp4"
-                              type="video/mp4">
+                        <source src="videos/sim-2.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-3.mp4"
-                        type="video/mp4">
+                        <source src="videos/sim-3.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-4.mp4"
-                        type="video/mp4">
+                        <source src="videos/sim-4.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-5.mp4"
-                              type="video/mp4">
+                        <source src="videos/sim-5.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-6.mp4"
-                              type="video/mp4">
+                        <source src="videos/sim-6.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="item">
                     <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                        <source src="videos/sim-7.mp4"
-                              type="video/mp4">
+                        <source src="videos/sim-7.mp4" type="video/mp4">
                     </video>
                   </div>
                 </div>
               </div>
             </div>
           </section>
-        </div>
+        <!-- </div> -->
 
-        <div class="row justify-content-md-center">
-            <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
-                    Simulated scenarios in the Habitat simulator
-                </p>
+            <div class="row justify-content-md-center">
+                <div class="col-md-12 col-lg-10">
+                    <p class="text-justify text-center">
+                        Simulated scenarios in the Habitat simulator
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class='myscope'>
+        <!-- <div class='myscope'> -->
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
                   <div id="results-carousel" class="carousel results-carousel">
                     <div class="item">
                       <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                          <source src="videos/real-1.mp4"
-                                type="video/mp4">
+                          <source src="videos/real-1.mp4" type="video/mp4">
                       </video>
                     </div>
                     <div class="item">
                       <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                          <source src="videos/real-2.mp4"
-                                type="video/mp4">
+                          <source src="videos/real-2.mp4" type="video/mp4">
                       </video>
                     </div>
                     <div class="item">
                       <video poster="" id="" autoplay controls muted loop playsinline height="100%">
-                          <source src="videos/real-3.mp4"
-                          type="video/mp4">
+                          <source src="videos/real-3.mp4" type="video/mp4">
                       </video>
                     </div>
                   </div>
                 </div>
               </div>
             </section>
-          </div>
+          <!-- </div> -->
 
-        <div class="row justify-content-md-center">
-            <div class="col-md-12 col-lg-10">
-                <p class="text-justify text-center">
-                    Real-world scenarios with a Fetch mobile robot
-                </p>
+            <div class="row justify-content-md-center">
+                <div class="col-md-12 col-lg-10">
+                    <p class="text-justify text-center">
+                        Real-world scenarios with a Fetch mobile robot
+                    </p>
+                </div>
             </div>
         </div>
 
