--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
           </section>
         <!-- </div> -->
 
-            <div class="row justify-content-md-center">
+            <!-- <div class="row justify-content-md-center">
                 <div class="col-md-12 col-lg-10">
                     <p class="text-justify text-center">
                         Simulated scenarios in the Habitat simulator
                     </p>
                 </div>
-            </div>
+            </div> -->
 
         <!-- <div class='myscope'> -->
             <section class="hero is-light is-small">
@@ -246,13 +246,13 @@
             </section>
           <!-- </div> -->
 
-            <div class="row justify-content-md-center">
+            <!-- <div class="row justify-content-md-center">
                 <div class="col-md-12 col-lg-10">
                     <p class="text-justify text-center">
                         Real-world scenarios with a Fetch mobile robot
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="row justify-content-md-center">
