--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
 
         <div class='myscope'>
-          <section class="hero is-light is-small">
+          <!-- <section class="hero is-light is-small">
             <div class="hero-body">
               <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
@@ -209,7 +209,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
         <!-- </div> -->
 
             <!-- <div class="row justify-content-md-center">
