--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             </div>
         </div>
 
-        <!-- <div class='myscope'> -->
-          <!-- <section class="hero is-light is-small">
+        <div class='myscope'>
+          <section class="hero is-light is-small">
             <div class="hero-body">
               <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
@@ -209,16 +209,16 @@
                 </div>
               </div>
             </div>
-          </section> -->
-        <!-- </div> -->
+          </section>
+        </div>
 
-            <!-- <div class="row justify-content-md-center">
-                <div class="col-md-12 col-lg-10">
-                    <p class="text-justify text-center">
-                        Simulated scenarios in the Habitat simulator
-                    </p>
-                </div>
-            </div> -->
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Simulated scenarios in the Habitat simulator
+                </p>
+            </div>
+        </div>
 
         <div class='myscope'>
             <section class="hero is-light is-small">
@@ -246,14 +246,13 @@
             </section>
         </div>
 
-            <!-- <div class="row justify-content-md-center">
-                <div class="col-md-12 col-lg-10">
-                    <p class="text-justify text-center">
-                        Real-world scenarios with a Fetch mobile robot
-                    </p>
-                </div>
-            </div> -->
-        <!-- </div> -->
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 col-lg-10">
+                <p class="text-justify text-center">
+                    Real-world scenarios with a Fetch mobile robot
+                </p>
+            </div>
+        </div>
 
         <div class="row justify-content-md-center">
             <div class="col-md-12 col-lg-10">
